--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,27 +9,64 @@
 </head>
 <body>
     <div class="container">
-        <h1>Galaxy Crowdfunding</h1>
-        
-        <div class="card">
-            <h3>Статус: <span id="connectionStatus">Не подключен</span></h3>
-            <p>Ваш адрес: <span id="walletAddress">0x...</span></p>
-            <button id="connectBtn" onclick="connectMetaMask()">Подключить кошелек</button>
+        <div class="header">
+            <h1>Galaxy Crowdfunding</h1>
+            <p class="subtitle">Decentralized Project Funding Platform</p>
         </div>
 
-        <div class="card balance-section">
-            <p>Баланс ETH: <span id="ethBalance">0.00</span></p>
-            <p>Баланс GTT: <span id="rewardBalance">0.00</span></p>
+        <div class="card wallet-card">
+            <div class="card-header">
+                <h3>Wallet Connection</h3>
+            </div>
+            <div class="status-section">
+                <div class="status-item">
+                    <span class="label">Status:</span>
+                    <span class="status-badge" id="connectionStatus">Disconnected</span>
+                </div>
+                <div class="status-item">
+                    <span class="label">Address:</span>
+                    <span class="address-text" id="walletAddress">0x...</span>
+                </div>
+            </div>
+            <button id="connectBtn" class="btn-primary" onclick="connectMetaMask()">Connect MetaMask Wallet</button>
         </div>
 
-        <hr>
-
-        <div class="card">
-            <h3>Создать проект</h3>
-            <input type="text" id="title" placeholder="Название проекта">
-            <input type="number" id="goal" placeholder="Цель (ETH)">
-            <button onclick="createCampaign()">Запустить в блокчейне</button>
+        <div class="card balance-card">
+            <div class="card-header">
+                <h3>Account Balance</h3>
+            </div>
+            <div class="balance-grid">
+                <div class="balance-item">
+                    <span class="balance-label">ETH Balance</span>
+                    <span class="balance-amount" id="ethBalance">0.00 ETH</span>
+                </div>
+                <div class="balance-item">
+                    <span class="balance-label">GTT Rewards</span>
+                    <span class="balance-amount" id="rewardBalance">0.00 GTT</span>
+                </div>
+            </div>
         </div>
+
+        <div class="card create-card">
+            <div class="card-header">
+                <h3>Create New Campaign</h3>
+            </div>
+            <form onsubmit="createCampaign(); return false;">
+                <div class="form-group">
+                    <label for="title">Project Name</label>
+                    <input type="text" id="title" placeholder="Enter project name" required>
+                </div>
+                <div class="form-group">
+                    <label for="goal">Target Amount (ETH)</label>
+                    <input type="text" id="goal" placeholder="e.g., 5.0, 0.001, 0.00002" inputmode="decimal" required>
+                </div>
+                <button type="submit" class="btn-success">Launch Campaign</button>
+            </form>
+        </div>
+
+        <footer class="footer">
+            <p>&copy; 2026 Galaxy Crowdfunding. Built on Ethereum.</p>
+        </footer>
     </div>
 
     <script src="app.js"></script>
